# bsod-kernel-fuzzing

./: .gitmodules  Dockerfile  README.md
bsod-afl/: CMakeLists.txt  README.md  harness.c
bsod-afl/src/: afl.c  afl.h  breakpoint.c  breakpoint.h  fuzz.c  fuzz.h  main.c  private.h  signals.c  sink.h  tracer.c  tracer.h  tracer_dynamic.c  tracer_dynamic.h  vmi.c  vmi.h
bsod-fakedev/: README.md
bsod-fakedev/qemu/hw/pci-replay/: meson.build  pci-nvidia.c  pci-replay.c  pci-replay.h
bsod-fakedev/scripts/: convert-qemu-trace.py  events  extract-ram-image.py  extract-seq-data.py
bsod-syzkaller/: README.md
bsod-syzkaller/config/: sample.cfg  syz-bp-cov.py
bsod-syzkaller/syz-bp-cov/: Makefile  README.md  breakpoint.c  breakpoint.h  main.c  syz-bp-triage.c
example/afl-harness/: harness.c
example/syzkaller/: config.cfg  dev_example.txt
example/testdriver/: Makefile  gen.py  testdriver.c
scripts/: extract-breakpoints.py
scripts/rootfs/: README.md  init
scripts/vfio/: bind.sh  unbind.sh  vfio.sh
